--- a/client/src/pages/messages/Messages.scss
+++ b/client/src/pages/messages/Messages.scss
@@ -4,7 +4,7 @@
     .container{
         width: 1350px;
         padding: 50px 0px;
-        .title{}
+        // .title{}
         table{
             width: 100%;
             tr{
