--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -4,10 +4,10 @@
     .container{
         width: 1350px;
         padding: 50px 0px;
-        .title{}
+        // .title{}
         table{
             width: 100%;
-            tr{
+            tr,thead,tbody{
                 height: 50px;
                 th{
                     text-align: left; 
