--- a/client/src/pages/gig/Gig.scss
+++ b/client/src/pages/gig/Gig.scss
@@ -118,6 +118,9 @@
                             .title{
                                 font-weight: 300;
                             }
+                            .desc{
+                                text-transform: capitalize;
+                            }
                         }
                     }
                     hr{
@@ -125,60 +128,6 @@
                         border: 1px solid lightgray;
                         margin-bottom: 20px;
                     }
-                }
-            }
-            .reviews{
-                margin-top: 50px;
-                .item{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-                    margin: 20px 0px;
-                    .user{
-                        display: flex;
-                        align-items: center;
-                        .pp{
-                            height: 50px;
-                            width: 50px;
-                            border-radius: 50%;
-                        }
-                        .country{
-                            display: flex;
-                            align-items: center;
-                            gap: 10px;
-                            color: gray;
-                            img{
-                                width: 20px;
-                            }
-                        }
-                    }
-                    .stars{
-                        display: flex;
-                        align-items: center;
-                        gap: 5px;
-                        img{
-                            width: 14px;
-                            height: 14px;
-                        }
-                        span{
-                            font-size: 14px;
-                            font-weight: bold;
-                            color: #ffc100;
-                        }
-                    }
-                    .helpful{
-                        display: flex;
-                        align-items: center;
-                        gap: 10px;
-                        img{
-                            width: 14px;
-                        }
-                    }
-                }
-                hr{
-                    height: 0;
-                    border: 0.5px solid rgb(240, 237, 237);
-                    margin: 50px 0px; 
                 }
             }
         }
