--- a/client/src/pages/gigs/Gigs.scss
+++ b/client/src/pages/gigs/Gigs.scss
@@ -85,7 +85,8 @@
         .cards{
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            gap: 20px;
+            justify-content: space-evenly;
             margin-top: 50px;
         }
     }
