Updated BreadCrumbs at gigs & gig page

--- a/client/src/pages/gigs/Gigs.scss
+++ b/client/src/pages/gigs/Gigs.scss
@@ -11,6 +11,7 @@
             font-weight: 400;
             font-size: 13px;
             color: #555;
+            text-transform: uppercase;
         }
         p{
             color: #555;
