--- a/client/src/pages/gig/Gig.scss
+++ b/client/src/pages/gig/Gig.scss
@@ -15,6 +15,7 @@
                 font-weight: 400;
                 font-size: 13px;
                 color: #555;
+                text-transform: uppercgigase;
             }
             .user{
                 display: flex;
